--- a/src/app/packages/core/less/z-index-globals.less
+++ b/src/app/packages/core/less/z-index-globals.less
@@ -1,4 +1,4 @@
+@menu-container: 3000;
 @context-menu-depth: 4000;
 @menu: 4000;
-@menu-container: 3000;
-
+@toast: 5000;
